@@ -1,8 +1,8 @@
 PREFIX=$(HOME)/usr
 PROJNAME=liw
-VERSION=1.1.3
+VERSION=1.2.0
 
-DEPENDENCY="zeda=1.2.13"
+DEPENDENCY="zeda=1.5.0"
 
 # dynamic linker (libdl)
 CONFIG_USE_LIBDL=y
