@@ -1,3 +1,4 @@
+2021. 4.29. Reflected new specification of zeda-config-gen. [app]
 2021. 3.31. Modified makefile to separately make and install library and applications. [makefile]
 2019.11.22. Rewrote README as a markdown file. [README]
 2019.10. 1. Enabled make uninstall. [makefile]
